[package]
name = "sv-finder"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
bam = "0.1.4"
rayon = "1.6.1"
merge_sequences  = { git = "https://github.com/Dr-TSteimle/merge_sequences" }
desc_sequence    = { git = "https://github.com/Dr-TSteimle/desc_sequence" }
rand = "0.8.5"
