[package]
name = "sv-finder"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
bam = "0.1.4"
rayon = "1.6.1"
merge_sequences  = { git = "https://git.t0m4.fr/Thomas/merge_sequences" }
desc_sequence    = { git = "https://git.t0m4.fr/Thomas/desc_sequence" }
rand = "0.8.5"
rust-lapper = "1.1.0"
anyhow = "1.0.93"
noodles-bgzf = "0.33.0"
