[package]
name = "sv-finder"
version = "1.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
bam = "0.1.4"
rayon = "1.6.1"
merge_sequences  = { git = "https://github.com/Dr-TSteimle/merge_sequences.git" }
desc_sequence    = { git = "https://github.com/Dr-TSteimle/desc_sequence.git" }
rand = "0.9"
rust-lapper = "1.1.0"
anyhow = "1.0.93"
noodles-bgzf = "0.37.0"
